--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,3 +1,8 @@
 {
-	"domain": "users.iexec.eth"
+	"domain": "users.iexec.eth",
+	"registration":
+	{
+		"proxy": "0x3a9e353Dd77570d06b2400D3f0eac4E644a223Dd",
+		"resolver": "0xD3ddcCDD3b25A8a7423B5bEe360a42146eb4Baf3"
+	}
 }
