--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,8 +1,6 @@
 {
 	"domain": "users.iexec.eth",
-	"registration":
-	{
-		"proxy": "0x3a9e353Dd77570d06b2400D3f0eac4E644a223Dd",
-		"resolver": "0xD3ddcCDD3b25A8a7423B5bEe360a42146eb4Baf3"
-	}
+	"resolver": "0xD3ddcCDD3b25A8a7423B5bEe360a42146eb4Baf3",
+	"proxy": "0x3a9e353Dd77570d06b2400D3f0eac4E644a223Dd",
+	"ensAddress": null
 }
