update @babel/runtime & react-scripts to latest version

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "/react/ens-registration",
   "dependencies": {
-    "@babel/runtime": "^7.6.0",
+    "@babel/runtime": "^7.6.2",
     "@eventstag/instascan": "^2.0.1",
     "ethers": "^4.0.37",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
